# AI-for-couples

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 759db681fe30_add_user_token_table.py  ba1438606028_initial_migration.py
src/: lifespan.py  main.py
src/auth/: config.py  dependencies.py  model.py  schema.py
src/core/: base_model.py  config.py  database.py  exception.py
src/dishes/: model.py  repository.py  router.py  schema.py  service.py
